2011-10-24  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-hist.el: Require w3m-util.

2011-10-22  Naohiro Aota  <naota@elisp.net>

	* w3m.el (w3m-goto-url): Check name anchor after redirect resolution.

2011-10-21  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-hist.el (w3m-history-restore-position): Don't hscroll if there
	are images ([emacs-w3m:11658]).

2011-10-17  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-canonicalize-url): Fix url that fails to have put
	a separator following a domain name.
	Suggested by Dan Jacobson <jidanni@jidanni.org>.

2011-10-14  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-url-coding-system-alist): Add a rule for Google.
	(w3m-url-coding-system): Allow function to determine coding system.

2011-10-14  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-url-encode-string, w3m-url-transfer-encode-string):
	Restore optional coding argument.
	(w3m-gmane-url-at-point, w3m-canonicalize-url): Do.
	(w3m-download): Decode file name in url.

	* w3m-form.el (w3m-form-make-form-data, w3m-form-parse-and-fontify):
	* w3m-search.el (w3m-search-escape-query-string, w3m-search-do-search)
	(w3m-search-uri-replace): Revert last change.

2011-10-13  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-url-coding-system-alist): New user option.
	(w3m-show-decoded-url, w3m-google-feeling-lucky-charset): Abolish.
	(w3m-url-coding-system): New function.
	(w3m-url-encode-string, w3m-url-readable-string)
	(w3m-url-transfer-encode-string): Use it.

	* w3m.el (w3m-fontify-anchors, w3m-gmane-url-at-point)
	(w3m-canonicalize-url, w3m-goto-url):
	* w3m-form.el (w3m-form-make-form-data, w3m-form-parse-and-fontify):
	* w3m-search.el (w3m-search-escape-query-string, w3m-search-do-search)
	(w3m-search-uri-replace): Don't specify coding system for encoding url.

2011-10-07  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-favicon.el (w3m-favicon-type): Prefer gif.
	(w3m-favicon-convert): Work for gif icons named "favicon.ico".
