@@ -1,3 +1,8 @@
+2011-11-14  Katsumi Yamaoka  <yamaoka@jpl.org>
+
+	* w3m.el (w3m-expand-url): Assume only a name anchor, that has no
+	scheme part nor directory part, to be the buffer: scheme.
+
 2011-10-24  Katsumi Yamaoka  <yamaoka@jpl.org>
 
 	* w3m-hist.el: Require w3m-util.
